sign in page code and other fixes

--- a/website/title.html
+++ b/website/title.html
@@ -11,13 +11,13 @@
             <div class= background>
             <div>
                 <div class = "text">
-                <h2 style = "font-size:40px">Welcome To</h2>
-                <h1 style = "font-size:50px">Crumpet Quest!(WIP)</h1> 
+                <h2>Welcome To</h2>
+                <h1>Crumpet Quest!(WIP)</h1> 
                 <a href = "sign.html">
-                <button class = sign style = "font-size:20px" id="Sign_In">Sign In</button>
+                <button id="Sign_In">Sign In</button>
                 </a>
                 <div>
-                <button class = create style = "font-size:20px" id="Create_Account"> Create Account</button>
+                <button class = create id="Create_Account"> Create Account</button>
                 </div>
                 </div>
                 
