--- a/website/sign.html
+++ b/website/sign.html
@@ -11,18 +11,23 @@
             <div class= background>
             <div>
                 <div class = "text">
-                <h1 style = "font-size:40px">Please Sign Into Your Account</h1> 
-                <input class = username type = text style = "font-size:20px" id="Username" placeholder = "Username"></button>
-                <span id = "Username_error">*</span>
+                <h1>Please Sign Into Your Account</h1>
                 <div>
-                <input class = password type = text style = "font-size:20px" id="Password" placeholder = "Password"></button>
-                <span id = "Password_error1">*</span>
+                <span class = SError id="SignIn_error"></span>
+                </div>
+                <input class = username type = text id="Username" placeholder = "Username"></button>
+                <span>*</span>
+                <div>
+                <input class = password type = text id="Password" placeholder = "Password"></button>
+                <span>*</span>
                 </div>
                 <div>
-                <input class = password type = text style = "font-size:20px" id="PasswordV" placeholder = "Verify Password"></button>
-                <span id = "Password_error2">*</span>
+                <input class = password type = text id="PasswordV" placeholder = "Verify Password"></button>
+                <span>*</span>
                 </div>
+                <button class = sign  id="Sign_In">Sign In</button>
                 </div>
+
                 
             </div>
     </main>
