--- a/website/sign.html
+++ b/website/sign.html
@@ -18,14 +18,14 @@
                 <input class = username type = text id="Username" placeholder = "Username"></button>
                 <span>*</span>
                 <div>
-                <input class = password type = text id="Password" placeholder = "Password"></button>
+                <input class = password type = text id="Password" placeholder = "Password" disabled = true></button>
                 <span>*</span>
                 </div>
                 <div>
-                <input class = password type = text id="PasswordV" placeholder = "Verify Password"></button>
+                <input class = password type = text id="PasswordV" placeholder = "Verify Password" disabled = true></button>
                 <span>*</span>
                 </div>
-                <button class = sign  id="Sign_In">Sign In</button>
+                <button class = sign  id="Sign_In">Check Username</button>
                 </div>
 
                 
